--- a/src/sass/components/card.sass
+++ b/src/sass/components/card.sass
@@ -2,15 +2,18 @@
     figcaption
         position: relative
     picture
-        display: inline-block
-        min-height: 150rem
+        display: block
         width: 100%
-        height: 100%
-        +media(1024)
-            max-height: 450rem
+        overflow: hidden
+        border-radius: 3px
         img
+            height: 100%
             border-radius: 3px
-            aspect-ratio: 3 / 4
+            // aspect-ratio: 3 / 4
+            transition: all .5s ease
+    form
+        position: relative
+        z-index: 4
 
     h2
         display: flex
@@ -80,6 +83,11 @@
     left: 0
     width: 100%
     height: 100%
+    z-index: 1
+    &:hover
+        ~ picture
+            > img
+                transform: scale(1.05)
 .color
     row-gap: 0
     column-gap: 5px
