--- a/src/sass/components/filter.sass
+++ b/src/sass/components/filter.sass
@@ -1,5 +1,44 @@
 .filter
     flex-wrap: wrap
+
+//range
+    
+.slider-range
+    position: relative
+    width: 190px
+    height: 1.5px
+    background: #ddd
+    margin: 20px 0 50rem
+
+.range
+    position: absolute
+    height: 100%
+    background: $black 
+
+.handle
+    position: absolute
+    width: 9px
+    height: 9px
+    background: $black
+    cursor: pointer
+    top: 50%
+    z-index: 2
+    border-radius: 1.5px
+    transform: translateY(-50%)
+
+#min-handle
+    left: 0
+
+#max-handle
+    right: 0
+
+.values
+    position: relative
+    top: 20rem
+    display: flex
+    justify-content: space-between
+    font-size: 16rem
+
 .filter_container 
     min-width: 40%  
     .info-item
@@ -18,6 +57,8 @@
             padding-bottom: 20rem
             font-size: 16rem
             font-weight: 500
+        .flex-between
+            gap: 50px
     input
         width: 15rem
         height: 15rem
