--- a/src/sass/components/sort.sass
+++ b/src/sass/components/sort.sass
@@ -3,6 +3,8 @@
     padding: 0 0 30rem
     column-gap: 8rem
     justify-content: flex-end
+    align-items: center
+    max-height: 40rem
     p
         color: #1E1E1E
         font-size: 18rem
