--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -9,7 +9,7 @@
 html
     font-size: 0.7px
     scroll-behavior: smooth
-    +media(1520)
+    +media(1440)
         font-size: 1px
     +media(2200)
         font-size: 1.5px
@@ -89,7 +89,9 @@ video
     background-color: $black
 
 .cta
-    display: block
+    display: flex
+    align-items: center
+    justify-content: center
     width: 90%
     padding: 19rem 60rem
     border-radius: 3px
@@ -140,11 +142,11 @@ video
     h3 
         // padding: 0 15px
         color: $black
-        font-size: 14px
+        font-size: 14rem
         white-space: nowrap
         font-weight: 300
         +media(1024)
-            font-size: 16px
+            font-size: 16rem
         &::after
             content: ""
             position: absolute
@@ -165,7 +167,7 @@ video
 .catalog_cta
     display: flex
     justify-content: center
-    padding: 20rem
+    padding: 30rem
     color: $black
     background-color: $white
     &:hover
@@ -331,18 +333,42 @@ video
         +media(1024)
             grid-template-columns: repeat(4, 1fr)
 
+
 .category_btn
     grid-template-columns: repeat(2, 1fr)
     padding-bottom: 30px
     +media(768)
         grid-template-columns: repeat(4,1fr)
-    a
+    label
+        position: relative
+        cursor: pointer
+        z-index: 2
+        transition: all .5s ease
+        &:hover
+            transform: scale(1.05)
+            > input
+                background-color: $black
+            >   span
+                background-color: $black
+                color: $white
+    input
         width: 100%
         border: 1px solid $black
-        &:hover
+        cursor: pointer
+        &:checked
             background-color: $black
-            color: $white
-
+            + span 
+                color: $white
+    span
+        text-align: center
+        position: absolute
+        top: 50%
+        left: 50%
+        font-size: 14rem
+        font-weight: 500
+        text-transform: uppercase
+        transform: translate(-50%, -50%)
+        
 .card 
     width: 42vw
     +media(768)
@@ -356,7 +382,7 @@ video
     color: $black
     width: 30px
     height: 30px
-    font-size: 14px
+    font-size: 14rem
     border-radius: 3px
     &:hover
         background-color: $black
@@ -368,6 +394,7 @@ video
     overflow: hidden
 
 .submit-btn
+    font-family: Gotham
     padding: 12rem 20rem
     color: $white
     border-radius: 3px
@@ -452,7 +479,19 @@ video
         right: 30rem
 .reviews_container
     padding: 70rem 0 0
-        
+a.spivpracia_product_btn,
+button.spivpracia_product_btn,
+.spivpracia_submit_btn
+    max-width: 240px
+    text-align: center
+    width: 100%
+    padding: 24rem 64rem
+    font-size: 18rem
+    font-weight: 500
+    line-height: norma
+    text-transform: uppercase
+    border-radius: 3px
+    border: 1px solid #121212
 @import components/filter
 @import components/sort
 @import components/footer
