--- a/src/pug/components/description_product.pug
+++ b/src/pug/components/description_product.pug
@@ -22,10 +22,10 @@
         table 
             thead 
                 tr  
-                    td розмір
-                    td довжина рукава від шиї
-                    td довжина виробу від шиї
-                    td напівобхват виробу
+                    th розмір
+                    th довжина рукава від шиї
+                    th довжина виробу від шиї
+                    th напівобхват виробу
             tbody 
                 tr
                     td 146
