--- a/src/pug/product.pug
+++ b/src/pug/product.pug
@@ -133,7 +133,7 @@ html(lang="en")
                                         label
                                             input(type="checkbox", name="").btn_opt.catalog_cta.items-center
                                             span від розміру XS до XL
-                                .flex.items-center
+                                .flex.items-center.order-product
                                     button(type="submit").submit-btn.spivpracia_submit_btn додати в кошик
                                     a(href="#").spivpracia_btn.spivpracia_product_btn співпраця
             section.same_product.container 
