--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -158,3 +158,20 @@ a.cancel
     cursor: pointer
     +media(1024)
         display: none
+.cart
+    position: relative
+.circle
+    position: absolute
+    bottom: -11px
+    right: -16px
+    width: 19px
+    height: 19px
+    background-color: $black
+    border-radius: 50%
+.number
+    position: absolute
+    top: 50%
+    left: 50%
+    font-size: 12px
+    color: $white
+    transform: translate(-50%, -50%)
