--- a/src/sass/product.sass
+++ b/src/sass/product.sass
@@ -148,9 +148,11 @@ p.price_rozdrib
         span
             font-size: 18rem
 .opt_size
+    display: block
     +media(768)
         width: 80%
     span 
+        display: block
         width: 100%
 .order-product
     flex-wrap: wrap
