--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -360,6 +360,7 @@ video
     input
         width: 100%
         border: 1px solid $black
+        border-radius: 0
         cursor: pointer
         &:checked
             background-color: $black
@@ -542,6 +543,7 @@ button.spivpracia_product_btn,
     button
         width: 20px
         height: 20px
+        color: $black
         background-color: $white 
         border: 1px solid $black 
         transition: all .5s ease
