--- a/src/pug/components/contacts.pug
+++ b/src/pug/components/contacts.pug
@@ -36,7 +36,7 @@
                     </svg>
                     span mbm.khm
             p.flex.item-center.inst
-                a(href="").flex.items-center
+                a(href="https://www.instagram.com/mbm_khm/" target="blank").flex.items-center
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
                         <g clip-path="url(#clip0_148_5313)">
                             <path d="M12.5 23.375C18.5751 23.375 23.5 18.4501 23.5 12.375C23.5 6.29987 18.5751 1.375 12.5 1.375C6.42487 1.375 1.5 6.29987 1.5 12.375C1.5 18.4501 6.42487 23.375 12.5 23.375Z" fill="white"/>
