add meta tag for seo

--- a/src/pug/basket.pug
+++ b/src/pug/basket.pug
@@ -3,6 +3,12 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0")
+        meta(http-equiv='X-UA-Compatible' content='ie=edge')
+        meta(name='author' content=' український бренд МВМ')
+        meta(name='robots' content='index follow')
+        meta(name="title" content="Кошик покупок — МВМ")
+        meta(name="description" content="Товари, які додано до кошика. Покупка одягу українського бренду MBM.")
+        meta(name="keywords" content="кошик покупок, онлайн замовлення, МВМ")
         link(rel="stylesheet", href="css/styles.css")
         link(rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png")
         link(rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png")
@@ -20,7 +26,7 @@ html(lang="en")
         meta(name="msapplication-TileColor" content="#ffffff")
         meta(name="msapplication-TileImage" content="/ms-icon-144x144.png")
         meta(name="theme-color" content="#ffffff")
-        title МВМ — Стильний і комфортний одяг для усієї родини
+        title Кошик магазину МВМ — Стильний і комфортний одяг для усієї родини
     body 
         .dark-bgc
         .dark-bgc-succes
