--- a/src/pug/components/information.pug
+++ b/src/pug/components/information.pug
@@ -14,7 +14,7 @@
                     li Працюємо з «Новою поштою» та «Укрпоштою».
             div.post-icon
                 picture 
-                    img(src="img/np.png", alt="")
+                    img(src="img/np.png", alt="Доставка MBM Укрпоштою", title="")
             div
                 p.head_info Безкоштовно при вартості замовлення від 2499 ₴. Умови безкоштовної доставки по Україні:
                 ul.mark
@@ -26,7 +26,7 @@
             div.post-icon
                 div 
                     picture 
-                        img(src="img/up.png", alt="")
+                        img(src="img/up.png", alt="Доставка MBM Новою поштою", title="")
             div
                 p.head_info Безкоштовно при вартості замовлення від 2499 ₴. Умови безкоштовної доставки по Україні:
                 ul.mark
