--- a/src/pug/product.pug
+++ b/src/pug/product.pug
@@ -3,6 +3,12 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0")
+        meta(http-equiv="X-UA-Compatible" content="ie=edge")
+        meta(name="author" content="український бренд МВМ")
+        meta(name="robots" content="index follow")
+        meta(name="title" content="<назва моделі> + <бренд (MBM)>")
+        meta(name="description" content="Купити <назва моделі> від українського бренду МВМ. Стильний та комфортний одяг для <категорія (жінок/чоловіків/дівчаток/хлопчиків)>.")
+        meta(name="keywords" content="одяг від українського бренду МВМ, <назва моделі>, <категорія (одяг для жінок/одяг для чоловіків/одяг для хлопчиків/одяг для дівчаток)>")
         link(rel="stylesheet", href="css/styles.css")
         link(rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png")
         link(rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png")
