--- a/src/pug/catalog.pug
+++ b/src/pug/catalog.pug
@@ -3,6 +3,12 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0")
+        meta(http-equiv="X-UA-Compatible" content="ie=edge")
+        meta(name="author" content="український бренд МВМ")
+        meta(name="robots" content="index follow")
+        meta(name="title" content="Каталог одягу для всієї родини — МВМ")
+        meta(name="description" content="Каталог одягу від українського бренду МВМ. Одяг для жінок, чоловіків, дівчаток та хлопчиків. Великий асортимент стильного та комфортного одягу.")
+        meta(name="keywords" content="каталог одягу, жіночий одяг, чоловічий одяг, дитячий одяг, одяг для дівчаток, одяг для хлопчиків, стильний та комфортний одяг, каталог одягу від MBM")
         link(rel="stylesheet", href="css/styles.css")
         link(rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png")
         link(rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png")
@@ -20,7 +26,7 @@ html(lang="en")
         meta(name="msapplication-TileColor" content="#ffffff")
         meta(name="msapplication-TileImage" content="/ms-icon-144x144.png")
         meta(name="theme-color" content="#ffffff")
-        title МВМ — Стильний і комфортний одяг для усієї родини
+        title Каталог магазину МВМ — Стильний і комфортний одяг для усієї родини
     body 
         .dark-bgc
         .dark-bgc-succes
@@ -29,10 +35,8 @@ html(lang="en")
         include components/header 
         main 
             section.catalog.wrapper.container#catalog
-                //- в кошику + - видалити і очистити батон, усі тоі=вари батон
                 h1 каталог
                 form(action="#").grid.wrapper.category_btn
-                    //- зробити радіокнопки
                     label
                         input(type="radio", name="categoryBtn").catalog_cta.items-center
                         span для жінок
