--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -4,7 +4,7 @@ header
         .logo 
             a(href="index.html").flex-between.items-center
                 picture 
-                    img(src="img/logo.svg", alt="")
+                    img(src="img/logo.svg",  alt="Інтернет-магазин MBM", title="логотип MBM")
                 span
                     | Власне
                     span виробництво одягу
