--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,8 +1,14 @@
 doctype html
-html(lang="en")
+html(lang="uk")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0")
+        meta(http-equiv="X-UA-Compatible" content="ie=edge")
+        meta(name="author" content="український бренд МВМ")
+        meta(name="robots" content="index follow")
+        meta(name="title" content="Одяг для всієї родини від українського бренду МВМ")
+        meta(name="description" content="Інтернет-магазин МВМ — стильний та зручний одяг для жінок, чоловіків і дітей. Український бренд, власне виробництво, висока якість за приємними цінами. Продаж гуртом та в роздріб.")
+        meta(name="keywords" content="одяг від MBM, інтернет-магазин МВМ, одяг для всієї родини, інтернет-магазин одягу, жіночий одяг, чоловічий одяг, дитячий одяг, український виробник одягу, український бренд одягу, одяг гуртом та в роздріб, стильний та комфортний одяг")
         link(rel="stylesheet", href="css/styles.css")
         link(rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png")
         link(rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png")
@@ -37,20 +43,20 @@ html(lang="en")
                         a.cta.black_cta(href="#").spivpracia_btn співпраця
                 .grid.grid_main_container 
                     .slider-images-1
-                        img(src="img/main-bg1.jpg", alt="")
-                        img(src="img/main-bg1-2.jpg", alt="")
-                        img(src="img/main-bg1-3.jpg", alt="")
-                        img(src="img/main-bg1-4.jpg", alt="")
-                        img(src="img/main-bg1-5.jpg", alt="")
+                        img(src="img/main-bg1.jpg", alt="дівчина в ніжно-блакитному худі", title="жіноче блакитне худі")
+                        img(src="img/main-bg1-2.jpg", alt="хлопець в білому худі", title="чоловіче біле худі")
+                        img(src="img/main-bg1-3.jpg", alt="хлопець в білому світшоті", title="чоловічий білий світшот")
+                        img(src="img/main-bg1-4.jpg", alt="хлопець в сірому худі і дівчина в сірій футболці", title="молодіжний одяг сірого кольору")
+                        img(src="img/main-bg1-5.jpg", alt="хлопець і дівчина в сірих худі ", title="сірі молодіжні худі")
                     video(autoplay loop muted playsinline)
                         source(src="video/video_mbm.mp4" type="video/mp4")
                     video(autoplay loop muted playsinline)
                         source(src="video/video_mbm2.mp4" type="video/mp4")
                     .slider-images-2
-                        img(src="img/main-bg2-1.jpg", alt="")
-                        img(src="img/main-bg2-2.jpg", alt="")
-                        img(src="img/main-bg2-3.jpg", alt="")
-                        img(src="img/main-bg2.jpg", alt="")
+                        img(src="img/main-bg2-1.jpg", alt="дівчина в бежевому худі", title="жіноче бежеве худі")
+                        img(src="img/main-bg2-2.jpg", alt="дівчина в білому світшоті з вишнями", title="білий світшот з вишнями")
+                        img(src="img/main-bg2-3.jpg", alt="дівчина в рожевому світшоті", title="жіночий рожевий світшот оверсайз")
+                        img(src="img/main-bg2.jpg", alt="дівчина в білому світшоті Brooklyn", title="жіночий білий світшот з написом")
             
             .move-text 
                 .content-slider.pos-r.flex
@@ -70,7 +76,7 @@ html(lang="en")
                 .wrapper.grid.col-2
                     .about-img 
                         picture 
-                            img(src="img/sec-3-bg.jpg", alt="" loading="lazy")
+                            img(src="img/sec-3-bg.jpg", alt="брюнетка в чорному худі", title="жіноче чорне спортивне худі" loading="lazy")
                     .about_container.container
                         h2 МВМ — комфорт і стиль для кожного дня
                         p Ми — український бренд із власним виробництвом, що спеціалізується на створенні дитячого, жіночого та чоловічого одягу. 
@@ -80,13 +86,13 @@ html(lang="en")
                             a.cta.black_cta(href="#").spivpracia_btn співпраця
                         .grid.col-4.about-pic
                             picture 
-                                img(src="img/sec-3-1.jpg", alt="" loading="lazy")
+                                img(src="img/sec-3-1.jpg", alt="довгокоса дівчина в білому світшоті", title="дівчачий біли світшот" loading="lazy")
                             picture 
-                                img(src="img/sec-3-2.jpg", alt="" loading="lazy")
+                                img(src="img/sec-3-2.jpg", alt="хлопчик в білій футболці-поло", title="біла футболка-поло" loading="lazy")
                             picture 
-                                img(src="img/sec-3-3.jpg", alt="" loading="lazy")
+                                img(src="img/sec-3-3.jpg", alt="дівчина в чорному світшоті", title="дівчачий чорний світшот з малюнками" loading="lazy")
                             picture 
-                                img(src="img/sec-3-4.jpg", alt="" loading="lazy")
+                                img(src="img/sec-3-4.jpg", alt="чоловік в чорному світшоті", title="чоловічий чорний світшот з написом" loading="lazy")
             section.same_product.container.wrapper
                 h2 популярні товари
                 .grid.col-4.catalog_container
@@ -113,13 +119,13 @@ html(lang="en")
                 .grid.col-3
                     div.review 
                         picture 
-                            img(src="img/rev1.png", alt="" loading="lazy")
+                            img(src="img/rev1.png", alt="жінка в чорному худі та джинсах", title="чорне жіноче худі" loading="lazy")
                     div.review 
                         picture 
-                            img(src="img/rev2.png", alt="" loading="lazy")
+                            img(src="img/rev2.png", alt="чоловік в окулярах в сірому світшоті", title="чоловічий сірий світшот" loading="lazy")
                     div.review 
                         picture 
-                            img(src="img/rev3.png", alt="" loading="lazy")
+                            img(src="img/rev3.png", alt="брюнетка в білому худі та джинсах", title="біле жіноче худі" loading="lazy")
                 include components/pagination
             section.info_container.wrapper.container
                 h2 інформація
