--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -174,6 +174,7 @@ video
     padding: 30rem
     color: $black
     background-color: $white
+    
     &:hover
         background-color: $gray
 
@@ -334,6 +335,12 @@ video
 
     
 .catalog
+    h1
+        padding-bottom: 30rem
+        text-align: center
+        font-size: 30rem
+        font-weight: 700
+        text-transform: uppercase
     .col-4
         grid-template-columns: repeat(2, 1fr)
         +media(1024)
@@ -592,9 +599,13 @@ button.spivpracia_product_btn,
     .catalog_cta
         width: 100%
         border: 1px solid $black
+        +media(768)
+            width: 40%
     .black_cta
         width: 100%
         background-color: $black 
+        +media(768)
+            width: 40%
         &:hover
             color: $white
 
