--- a/src/sass/components/card.sass
+++ b/src/sass/components/card.sass
@@ -104,12 +104,18 @@
         height: 15px
         border-radius: 50%
         transform: translate(16%, 16%)
+        +media(1440)
+            width: 20rem
+            height: 20rem
     input
         width: 20px
         height: 20px
         border-radius: 50%
         border: 4px solid $white
         outline:1px solid $white
+        +media(1440)
+            width: 25rem
+            height: 25rem
         &:checked
             outline: 1px solid $gray
             
