--- a/src/sass/product.sass
+++ b/src/sass/product.sass
@@ -151,6 +151,7 @@ p.price_rozdrib
     display: block
     +media(768)
         width: 80%
+        max-width: 370rem
     span 
         display: block
         width: 100%
