--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -354,9 +354,10 @@ video
         grid-template-columns: repeat(4,1fr)
     label
         position: relative
-        cursor: pointer
+        display: block
         z-index: 2
         transition: all .5s ease
+        cursor: pointer
         &:hover
             transform: scale(1.05)
             > input
@@ -374,13 +375,14 @@ video
             + span 
                 color: $white
     span
-        text-align: center
         position: absolute
         top: 50%
         left: 50%
+        display: block
         font-size: 14rem
         font-weight: 500
         text-transform: uppercase
+        text-align: center
         transform: translate(-50%, -50%)
         
 .card 
@@ -507,7 +509,7 @@ button.spivpracia_product_btn,
     border-radius: 3px
     border: 1px solid #121212
     +media(768)
-        max-width: 240px
+        max-width: 240rem
 @import components/filter
 @import components/sort
 
