--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -684,5 +684,20 @@ button.spivpracia_product_btn,
             background-color: $black
 .order_cta
     padding-top: 40rem
-    
+.error_container
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    text-align: center
+    min-height: 47vh  
+    p
+        font-size: 24rem
+        padding-bottom: 20rem
+
+p.error_page
+    font-size: 90rem
+
 @import components/footer
+
+
