--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -9,6 +9,8 @@
 html
     font-size: 0.7px
     scroll-behavior: smooth
+    +media(1250)
+        font-size: 0.9px
     +media(1440)
         font-size: 1px
     +media(2200)
@@ -537,7 +539,7 @@ button.spivpracia_product_btn,
 .basket-card
     grid-template-columns: repeat(2, 1fr)
     +media(768)
-        grid-template-columns: 10% 90%
+        grid-template-columns: 10% 88%
 .description_bascket 
     h2
         width: 50%
