--- a/src/sass/components/card.sass
+++ b/src/sass/components/card.sass
@@ -117,7 +117,7 @@
             width: 25rem
             height: 25rem
         &:checked
-            outline: 1px solid $gray
+            outline: 1px solid #ccc
             
 .price,
 .size
